Mass cleanups.